--- a/src/gui/package.json
+++ b/src/gui/package.json
@@ -11,7 +11,7 @@
   "license": "MIT",
   "devDependencies": {
     "electron": "^28.1.0",
-    "electron-builder": "^24.9.1"
+    "electron-builder": "^24.13.3"
   },
   "build": {
     "appId": "com.echozone.app",
@@ -24,8 +24,10 @@
       "../../dist/echozone-cmd.exe"
     ],
     "win": {
-      "target": "portable"  
-	}
+      "target": "portable",
+	  "arch": [
+          "x64"
+        ]
+    }
   }
 }
-
