--- a/src/gui/package.json
+++ b/src/gui/package.json
@@ -1,33 +1,35 @@
 {
-  "name": "echozone",
-  "version": "1.0.0",
-  "description": "echozone - winamp reimagined",
-  "main": "main.js",
-  "scripts": {
-    "start": "electron .",
-    "build:win": "electron-builder --win"
-  },
-  "author": "Manuel Lopez",
-  "license": "MIT",
-  "devDependencies": {
-    "electron": "^28.1.0",
-    "electron-builder": "^24.13.3"
-  },
-  "build": {
-    "appId": "com.echozone.app",
-    "productName": "echozone",
-    "directories": {
-      "output": "../../dist"
-    },
-    "files": [
-      "**/*",
-      "../../dist/echozone-cmd.exe"
-    ],
-    "win": {
-      "target": "portable",
-	  "arch": [
-          "x64"
-        ]
-    }
-  }
+	"name": "echozone",
+	"version": "1.0.0",
+	"description": "echozone - winamp reimagined",
+	"main": "main.js",
+	"scripts": {
+		"start": "electron .",
+		"build:win": "electron-builder --win"
+	},
+	"author": "Manuel Lopez",
+	"license": "MIT",
+	"devDependencies": {
+		"electron": "^28.1.0",
+		"electron-builder": "^24.13.3"
+	},
+	"build": {
+		"appId": "com.echozone.app",
+		"productName": "echozone",
+		"directories": {
+			"output": "../../dist"
+		},
+		"files": [
+			"**/*",
+			"../../dist/echozone-cmd.exe"
+		],
+		"win": {
+			"target": [
+				{
+					"target": "portable",
+					"arch": ["x64"]
+				}
+			]
+		}
+	}
 }
