--- a/echozone/package.json
+++ b/echozone/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+	"tauri-win": "cargo tauri"
   },
   "dependencies": {
     "preact": "^10.25.1",
