--- a/echozone/package.json
+++ b/echozone/package.json
@@ -8,17 +8,17 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "tauri": "tauri",
-	"tauri-win": "cargo tauri"
+    "tauri-win": "cargo tauri"
   },
   "dependencies": {
-    "preact": "^10.25.1",
-    "@tauri-apps/api": "^2",
-    "@tauri-apps/plugin-opener": "^2"
+    "@tauri-apps/api": "^2.4.0",
+    "@tauri-apps/plugin-opener": "^2",
+    "preact": "^10.25.1"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.9.3",
+    "@tauri-apps/cli": "^2",
     "typescript": "~5.6.2",
-    "vite": "^6.0.3",
-    "@tauri-apps/cli": "^2"
+    "vite": "^6.0.3"
   }
 }
