--- a/echozone/package.json
+++ b/echozone/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tauri-apps/api": "^2.4.0",
     "@tauri-apps/plugin-opener": "^2",
+    "interactjs": "^1.10.27",
     "preact": "^10.25.1"
   },
   "devDependencies": {
