--- a/echozone/package.json
+++ b/echozone/package.json
@@ -14,6 +14,7 @@
     "@tauri-apps/api": "^2.4.0",
     "@tauri-apps/plugin-opener": "^2",
     "interactjs": "^1.10.27",
+    "phosphor-react": "^1.4.1",
     "preact": "^10.25.1"
   },
   "devDependencies": {
