--- a/echozone/package.json
+++ b/echozone/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@preact/preset-vite": "^2.9.3",
     "@tauri-apps/cli": "^2",
+    "@types/youtube": "^0.1.0",
     "typescript": "~5.6.2",
     "vite": "^6.0.3"
   }
