added some eq stuff + figured out yt-dlp so gonna move to that next

--- a/echozone/package.json
+++ b/echozone/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@tauri-apps/api": "^2.4.0",
+    "@tauri-apps/plugin-fs": "^2.2.0",
     "@tauri-apps/plugin-opener": "^2",
     "interactjs": "^1.10.27",
     "phosphor-react": "^1.4.1",
