--- a/echozone/src-tauri/Cargo.toml
+++ b/echozone/src-tauri/Cargo.toml
@@ -15,7 +15,7 @@ name = "echozone_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
-tauri-build = { version = "2", features = [] }
+tauri-build = { version = "2", features = ["config-toml"] }
 
 [dependencies]
 tauri = { version = "2", features = [] }
